<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#FDFCFC"
        android:gravity="end"
        android:hint="@string/calculate"
        android:textColor="#4B4B4B"
        android:textSize="80sp" />

    <!-- First Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSeven"
                style="@style/CalculatorButton"
                android:text="@string/_7"
                android:textColorLink="@color/purple_500" />

            <Button
                android:id="@+id/btnEight"
                style="@style/CalculatorButton"
                android:text="@string/_8" />

            <Button
                android:id="@+id/btnNine"
                style="@style/CalculatorButton"
                android:text="@string/_9" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/CalculatorButton"
                android:text="@string/add" />
        </LinearLayout>

        <!-- Second Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFour"
                style="@style/CalculatorButton"
                android:text="@string/_4" />

            <Button
                android:id="@+id/btnFive"
                style="@style/CalculatorButton"
                android:text="@string/_5" />

            <Button
                android:id="@+id/btnSix"
                style="@style/CalculatorButton"
                android:text="@string/_6" />

            <Button
                android:id="@+id/btnSub"
                style="@style/CalculatorButton"
                android:text="@string/minus" />
        </LinearLayout>

        <!-- Third Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOne"
                style="@style/CalculatorButton"
                android:text="@string/_1" />

            <Button
                android:id="@+id/btnTwo"
                style="@style/CalculatorButton"
                android:text="@string/_2" />

            <Button
                android:id="@+id/btnThree"
                style="@style/CalculatorButton"
                android:text="@string/_3" />

            <Button
                android:id="@+id/btnMult"
                style="@style/CalculatorButton"
                android:text="@string/x" />
        </LinearLayout>

        <!-- Fourth Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDot"
                style="@style/CalculatorButton"
                android:layout_width="match_parent"
                android:text="@string/decimal" />

            <Button
                android:id="@+id/btnZero"
                style="@style/CalculatorButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zero" />

            <Button
                android:id="@+id/btnEqual"
                style="@style/CalculatorButton"
                android:layout_width="match_parent"
                android:text="@string/equal" />

            <Button
                android:id="@+id/btnDiv"
                style="@style/CalculatorButton"
                android:layout_width="match_parent"
                android:text="@string/div" />
        </LinearLayout>

    <!-- 5th Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClear"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:text="@string/c" />

    </LinearLayout>

    </LinearLayout>
